--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.coffee",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "app": "coffee index.coffee 192.168.0.32 49586"
   },
   "author": "",
   "license": "NONE",
   "dependencies": {
     "csv-parser": "^1.7.0"
+  },
+  "devDependencies": {
+    "coffee-script": "~1.9.3"
   }
 }
